--- a/index.html
+++ b/index.html
@@ -2,25 +2,35 @@
 <html lang="en">
 <html>
 <head>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
 	<title>CTR</title>
 </head>
 <body>
-<nav>
-<ul class="hr">
-	<p>CRL</p>
-	<li class="spisok"><a href="#">Home</a></li>
-	<li class="spisok"><a href="#">About</a></li>
-	<li class="spisok"><a href="#">Contact</a></li>
-	<li class="spisok"><a href="#">Sign IN</a></li>
-	<li class="spisok" id="l1"><a href="#">Sign UP</a></li>
-</ul>
-</nav>
-<header></header>
+<header>
+	<div class="top_menu">
+	<div class="logo">CRL</div>
+	<nav class="main_menu">
+	<ul>
+		<li><a class="menu_item" href="">Home</a></li>
+		<li><a class="menu_item" href="">About</a></li>
+		<li><a class="menu_item" href="">Contact</a></li>
+		<li><a class="menu_item" href="">Sign IN</a></li>
+		<li><a class="menu_item rounded" href="">Sign UP</a></li>
+	</ul>
+	</nav>
+</div>
+	<div class="header_content">
+		
+	</div>
+</header>
 <main>
-	<section class="s1"></section>
-	<section class="s2"></section>
+ <section class="section_1"></section>
+ <section class="section_2"></section>
 </main>
-<footer>uuiopijhbvhjiopppppppppppp</footer>
+<footer></footer>
 </body>
 </html>
