--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 <header>
-	<div class="top_menu">
 	<div class="logo">CRL</div>
 	<nav class="main_menu">
 	<ul>
@@ -22,14 +21,14 @@
 		<li><a class="menu_item rounded" href="">Sign UP</a></li>
 	</ul>
 	</nav>
-</div>
-	<div class="header_content">
-		
-	</div>
 </header>
 <main>
- <section class="section_1"></section>
- <section class="section_2"></section>
+	<section class="section_1">
+		<div class="section_left">Responsive<br> layouts<span class="text_brown">don’t<br>have to be a<br> struggle</span></div>
+		<div class="section_right">Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+	</section>
+ 	<section class="section_2"></section>
+ 	<section class="section_3"></section>
 </main>
 <footer></footer>
 </body>
