--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 <main>
 	<section class="section_1">
 		<div class="section_left">Responsive<br> layouts<span class="text_brown">don’t<br>have to be a<br> struggle</span></div>
-		<div class="section_right">Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+		<div class="section_first_right"><div class="section_right"><p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> <a href="" class="rounded">I want to learn</a></div></div>
 	</section>
- 	<section class="section_2"></section>
+ 		<section class="section_2"> <article><h1>Mobile-first</h1>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</article>
+ 		<article><h1>Efficient</h1><p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+ 		<article><h1>Done right</h1><p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></article></section>
  	<section class="section_3"></section>
 </main>
 <footer></footer>
