--- a/index.html
+++ b/index.html
@@ -27,10 +27,28 @@
 		<div class="section_left">Responsive<br> layouts<span class="text_brown">don’t<br>have to be a<br> struggle</span></div>
 		<div class="section_first_right"><div class="section_right"><p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> <a href="" class="rounded">I want to learn</a></div></div>
 	</section>
- 		<section class="section_2"> <article><h1>Mobile-first</h1>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</article>
- 		<article><h1>Efficient</h1><p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
- 		<article><h1>Done right</h1><p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></article></section>
- 	<section class="section_3"></section>
+ 		<section class="section_2">
+ 			<article>
+ 				<h2>Mobile-first</h2>
+ 				<p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+ 			</article>
+ 		<article>
+ 			<h2>Efficient</h2>
+ 			<p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+ 		</article>
+ 		<article>
+ 			<h2>Done right</h2>
+ 			<p>Lorem ipsum dolor sit amet, consectetur adipiscin   gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+ 		</article>
+ 	</section>
+ 	<section class="section_3">
+ 		<div class="section_3_photo"
+ 		><h2>It doesn’t have to be so hard</h2>
+ 		<p>Lorem ipsum dolor sit amet, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua. Ut enim a    d minim veniam. Lorem ipsum dolor sit am   et, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua. Ut enim ad minim veniam.</p>
+ 		<img src="01.jpg" alt="картинка не загрузилась, слишком тяжолая!">
+ 		<p>Lorem ipsum dolor sit amet, consectetur a dipiscin   gelit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua. Ut enim a    d minim veniam. Lorem ipsum dolor sit amet, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua. Ut enim ad minim veniam.</p>
+ 	</div>
+ 	</section>
 </main>
 <footer></footer>
 </body>
