--- a/index.html
+++ b/index.html
@@ -48,8 +48,43 @@
  		<img src="01.jpg" alt="картинка не загрузилась, слишком тяжолая!">
  		<p>Lorem ipsum dolor sit amet, consectetur a dipiscin   gelit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua. Ut enim a    d minim veniam. Lorem ipsum dolor sit amet, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua. Ut enim ad minim veniam.</p>
  	</div>
+ 	<div class="blocks">
+ 		<article><h2>Break it down</h2><p>Lorem ipsum dolor sit am   et, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua.</p></article>
+ 		<article><h2>Work your way up</h2><p>Lorem ipsum dolor sit am   et, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua.</p></article>
+ 		<article><h2>&nbsp;</h2><p>Lorem ipsum dolor sit am   et, consectetur a    dipiscin   g elit, sed do eiusm   od tempor in   cididunt ut labore et dolore ma    gna aliqua.</p></article>
+ 	</div>
  	</section>
 </main>
-<footer></footer>
+<footer>
+	<div class="footer_head">just scratching the surface</div>
+	<div class="footer_dno">
+		<div>
+			
+		</div>
+		<nav class="spisok" >
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li>&nbsp;</li>
+		</ul>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</nav>
+	</div>
+</footer>
 </body>
 </html>
