--- a/index.html
+++ b/index.html
@@ -58,30 +58,31 @@
 <footer>
 	<div class="footer_head">just scratching the surface</div>
 	<div class="footer_dno">
-		<div>
-			
-		</div>
-		<nav class="spisok" >
+		
+		<div class="nav_text"><h2 class="nav_item">About our company</h2>
+			Lorem ipsum dolor sit amet, consectetur a dipiscin gelit, sed do eiusm odtempor in cididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+		
+		<nav class="spisok">
+			<h3 class="nav_item">Getting around</h3>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li><a href="">Home</a></li>
+			<li><a href="">About</a></li>
+			<li><a href="">Contact</a></li>
 			<li>&nbsp;</li>
 		</ul>
+			<h3 class="nav_item">Otherth</h3>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href="">Lorem ipsum</a></li>
+				<li><a href="">dolor</a></li>
+				<li><a href="">sit amet</a></li>
+				<li><a href="">consectetur</a></li>
 			</ul>
+				<h3 class="nav_item">And more</a></h3>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href="">Lorem ipsum</a></li>
+				<li><a href="">dolor</a></li>
+				<li><a href="">sit amet</a></li>
+				<li><a href="">consectetur</a></li>
 			</ul>
 		</nav>
 	</div>
